--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css"/>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
@@ -13,38 +15,39 @@
 <body>
 <header>
     <nav>
-        <h1><a href="/">Restaurant Reviews</a></h1>
+        <h1><a href="/" tabindex="-1" aria-label="Restaurent review">Restaurant Reviews</a></h1>
     </nav>
 </header>
 
 <main id="maincontent">
     <section id="map-container">
-        <div id="map"></div>
+        <div id="map" aria-hidden="true" role="application"></div>
     </section>
     <section>
-        <div class="filter-options">
+        <div class="filter-options" tabindex="0">
             <h2>Filter Results</h2>
-            <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+            <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" aria-label="Select the neighborhood">
                 <option value="all">All Neighborhoods</option>
             </select>
-            <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+            <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()" aria-label="Select the cuisines">
                 <option value="all">All Cuisines</option>
             </select>
         </div>
-        <ul id="restaurants-list"></ul>
+        <ul id="restaurants-list" tabindex="0" aria-label="Restaurants list"></ul>
     </section>
 </main>
+
+<footer id="footer">
+    Copyright (c) 2019 <a href="/" aria-label="Restaurant Review link"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+</footer>
+
 <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
         integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
         crossorigin=""></script>
 <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
 <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
+<script type="application/javascript" charset="utf-8" src="js/service_worker_register.js"></script>
 <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script> -->
-
-
-<footer id="footer">
-    Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
-</footer>
 
 </body>
 
