--- a/restaurant.html
+++ b/restaurant.html
@@ -2,13 +2,12 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
     <!-- Normalize.css for better cross-browser consistency -->
     <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css"/>
     <!-- Main CSS file -->
     <link rel="stylesheet" href="css/styles.css" type="text/css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
-          integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-          crossorigin=""/>
     <title>Restaurant Info</title>
 </head>
 
@@ -17,11 +16,11 @@
 <header>
     <!-- Beginning nav -->
     <nav>
-        <h1><a href="/">Restaurant Reviews</a></h1>
+        <h1><a href="/" tabindex="-1" aria-label="Restaurent Reviews">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb">
-        <li><a href="/">Home</a></li>
+    <ul id="breadcrumb" aria-label="Breadcumb">
+        <li><a href="/" aria-label="Home link">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
     <!-- End nav -->
@@ -31,14 +30,14 @@
 <!-- Beginning main -->
 <main id="maincontent">
     <!-- Beginning map -->
-    <section id="map-container">
+    <section id="map-container" role="application" aria-label="Map of the restaurant">
         <div id="map"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
-    <section id="restaurant-container">
+    <section id="restaurant-container" tabindex="0" aria-label="Restaurant Information">
         <h1 id="restaurant-name"></h1>
-        <img id="restaurant-img">
+        <img id="restaurant-img" alt="Restaurant photo">
         <p id="restaurant-cuisine"></p>
         <p id="restaurant-address"></p>
         <table id="restaurant-hours"></table>
@@ -54,12 +53,10 @@
 
 <!-- Beginning footer -->
 <footer id="footer">
-    Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+    Copyright (c) 2019 <a href="/" aria-label="Restaurant Reviews link"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
 </footer>
 <!-- End footer -->
-<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
-        integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-        crossorigin=""></script>
+
 <!-- Beginning scripts -->
 <!-- Database helpers -->
 <script type="text/javascript" src="js/dbhelper.js"></script>
