--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css"/>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
+          integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+          crossorigin=""/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
     <title>Restaurant Reviews</title>
 </head>
 
@@ -23,10 +26,12 @@
     <section>
         <div class="filter-options" tabindex="0">
             <h2>Filter Results</h2>
-            <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" aria-label="Select the neighborhood">
+            <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()"
+                    aria-label="Select the neighborhood">
                 <option value="all">All Neighborhoods</option>
             </select>
-            <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()" aria-label="Select the cuisines">
+            <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()"
+                    aria-label="Select the cuisines">
                 <option value="all">All Cuisines</option>
             </select>
         </div>
@@ -35,9 +40,13 @@
 </main>
 
 <footer id="footer">
-    Copyright (c) 2019 <a href="/" aria-label="Restaurant Review link"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+    Copyright (c) 2019 <a href="/" aria-label="Restaurant Review link"><strong>Restaurant Reviews</strong></a> All
+    Rights Reserved.
 </footer>
 
+<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+        integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+        crossorigin=""></script>
 <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
 <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
 <script type="application/javascript" charset="utf-8" src="js/service_worker_register.js"></script>
